# cc_learning

./: .gitmodules  README.md
autotools/: Makefile.in  configure.ac  configure.scan
autotools/autom4te.cache/: output.0  requests  traces.0
cache_data/: CMakeLists.txt  README.md
cache_data/src/: random_access.cc  sequence_access.cc
common_section/: CMakeLists.txt  README.md
common_section/src/: CMakeLists.txt  main.c
create_child_proc/: CMakeLists.txt  README.md
create_child_proc/src/: greeting.c  main.c
debug_macro/: main  main.c  main.pp.c
linking/: Makefile  README.md
linking/src/: main.cc  static_local_var.cc  swap.cc
listify_macro/: README.md  main
listify_macro/src/: main.c  utils.h
machine_level_represent_prog/: Makefile  README.md
machine_level_represent_prog/src/: Makefile  Submakefile  lib_1.c  lib_1.h  main.c
nested_makefile/: Makefile  README.md  config.mk  config_temp.mk  params.mk
nested_makefile/lib/: Makefile  math_utils.c  math_utils.h  string_utils.c  string_utils.h
nested_makefile/src/: Makefile  app_logic.c  app_logic.h  main.c
nested_makefile/tests/: Makefile  test_math.c  test_math.h  test_runner.c  test_string.c  test_string.h
nested_makefile/tools/: Makefile  calculator.c  string_processor.c
poll_callback/: CMakeLists.txt
poll_callback/src/: main.c
smart_pointer/: CMakeLists.txt
smart_pointer/biuld/: CMakeCache.txt  build.ninja  cmake_install.cmake
smart_pointer/src/: CMakeLists.txt  shared_ptr.cc  weak_ptr.cc
triple_dots_in_array/: CMakeLists.txt
triple_dots_in_array/src/: main.c
(+5 files in other folders)
